# docker-Kafka-gRPC-example

./: .env.example  Dockerfile  README.md  compose.yaml  kafka_topics.yml  proto-builder.Dockerfile  pyproject.toml  run
config/: log4j.properties  settings.py
env/: pyvenv.cfg
kafka/: app.py
kafka/kafka_management/: consumer.py  grpc_server.py  handlers.py  producer.py  ratelimiter.py
kafka/kafka_management/protos/: kafka_management.proto
test/: test_smoke_kafka.py
